# NetworkTokenizers

./: .gitignore  entropy_job.sh  pyproject.toml  sentence.sh
data/: network_corpus.txt  network_decimal_corpus.txt  worker_0_part_0000.arrow
data/chunks/: metadata.json
others/: create_field_pcap_corpus.py  field_aware_tokenizer.py  pcap_text_tokenizer.py  pcap_text_tokenizer_test.py  pcap_text_tokenizer_usage.py  retrain_toenizer.py  test.py  train_pcap_sentencepiece_tokenizer.py  train_word.py
src/byte/bpe/: create_field_pcap_corpus.py  prepare_corpus.py  prepare_field_corpus.py  retrain_toenizer.py  test.py  train_pcap_sentencepiece_tokenizer.py  train_sentencepiece.py
src/byte/entropy/: base_transformer.py  corpus_utils.py  corpus_utils_onthefly.py  train_entropy.py  train_entropy_onthefly.py  transformer.py
src/byte/raw/: base_tokenizer.py  field_aware_pcap_byte_tokenizer.py  field_aware_tokenizer.py  pcap_byte_tokenizer.py  pcap_text_tokenizer.py  pcap_text_tokenizer_usage.py  special_tok_tokenizer.py  token_pcap_byte_tokenizer.py
src/preprocess/: arrow_tok.py  pcap_duplicate_detector.py  pretokenize_pcap_entropy.py
test/: pcap_text_tokenizer_test.py  test_field_aware_pcap_byte_tokenizer.py  test_pcap_byte_tokenizer.py  test_token_pcap_byte_tokenizer.py
usage/: usage_field_aware_pcap_byte_tokenizer.py  usage_pcap_byte_tokenizer.py  usage_token_pcap_byte_tokenizer.py
vocab/20250804_132247-network_corpus/: network_model.model  network_model.vocab  network_model_info.json
